WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66456
A Worker constructor should throw TypeError, when the number of arguments is not enough
https://bugs.webkit.org/show_bug.cgi?id=66456
Summary
A Worker constructor should throw TypeError, when the number of arguments is ...
Kentaro Hara
Reported
2011-08-18 01:59:55 PDT
Currently, a Worker constructor throws SyntaxError, when the number of arguments is not enough. However, the spec requires TypeError in that case (
http://www.w3.org/TR/WebIDL/#es-operations
). FYI: This is a part of the patches for
bug 65839
.
Attachments
Patch
(4.26 KB, patch)
2011-08-18 02:04 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
Patch
(4.40 KB, patch)
2011-08-18 03:54 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2011-08-18 02:04:53 PDT
Created
attachment 104316
[details]
Patch
Adam Barth
Comment 2
2011-08-18 02:46:55 PDT
Comment on
attachment 104316
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=104316&action=review
> Source/WebCore/ChangeLog:8 > + A Worker constructor should throw TypeError, when the number of arguments is not enough > +
https://bugs.webkit.org/show_bug.cgi?id=66456
> + > + Reviewed by NOBODY (OOPS!). > + > + Test: fast/workers/worker-constructor.html
pls add reference to the spec. thx.
Kentaro Hara
Comment 3
2011-08-18 03:54:46 PDT
Created
attachment 104319
[details]
Patch
Adam Barth
Comment 4
2011-08-18 11:00:05 PDT
Comment on
attachment 104319
[details]
Patch ok. Your ChangeLog is still minimalistic, but its ok.
WebKit Review Bot
Comment 5
2011-08-18 12:43:25 PDT
Comment on
attachment 104319
[details]
Patch Clearing flags on attachment: 104319 Committed
r93336
: <
http://trac.webkit.org/changeset/93336
>
WebKit Review Bot
Comment 6
2011-08-18 12:43:30 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7
2011-08-23 11:29:39 PDT
***
Bug 66277
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug